Attempt to fix travisci

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: go
 go:
   - 1.11.x
   - 1.12.x
+os:
+  - linux
+  - osx
+  - windows
 env:
   - GO111MODULE=on
 git:
@@ -10,7 +14,7 @@ git:
 notifications:
   email: false
 before_script:
-  - go install -mod vendor github.com/golangci/golangci-lint/cmd/golangci-lint
+  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
 script:
   - golangci-lint run
   - go test -v ./...
