--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ git:
 notifications:
   email: false
 before_script:
-  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+  - curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.16.0
 script:
   - golangci-lint run
   - go test -v ./...
