--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,14 +7,18 @@ on:
     branches: 
       - master
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
+  test:
+    name: Test
+    strategy:
+      matrix:
+        golang: ["1.13", "1.12"]
+        os: ["ubuntu-latest", "macos-latest"]
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Set up Go 1.13
+    - name: Set up Go ${{ matrix.golang }}
       uses: actions/setup-go@v1
       with:
-        go-version: 1.13
+        go-version: ${{ matrix.golang }}
       id: go
 
     - name: Check out code into the Go module directory
@@ -24,8 +28,8 @@ jobs:
       run: |
         go get -v -t -d ./...
 
-    - name: Build
-      run: go build -v .
+    - name: Lint
+      run: golangci-lint run
     
     - name: Test
       run: go test -v ./...
