--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,9 @@ jobs:
       with:
         go-version: ${{ matrix.golang }}
       id: go
+    
+    - name: Download golangci-lint
+      run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.2
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
