--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,19 +20,15 @@ jobs:
       with:
         go-version: ${{ matrix.golang }}
       id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
     
     - name: Download golangci-lint
       run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.2
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-
     - name: Lint
-      run: golangci-lint run
+      run: $(go env GOPATH)/bin/golangci-lint run
     
     - name: Test
       run: go test -v ./...
