--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
       run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.2
 
     - name: Lint
-      run: $(go env GOPATH)/bin/golangci-lint run
+      run: $(go env GOPATH)/bin/golangci-lint run --timeout=10m
     
     - name: Test
       run: go test -v ./...
