--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,6 +15,13 @@ jobs:
         os: ["ubuntu-latest", "macos-latest"]
     runs-on: ${{ matrix.os }}
     steps:
+    - name: Remove previous jobs
+      uses: rokroskar/workflow-run-cleanup-action@master
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      # NOTE: Don't stop master or tags jobs since they might be uploading assets and do a partial release
+      if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/master' && matrix.os == 'ubuntu-latest'"
+
     - name: Set up Go ${{ matrix.golang }}
       uses: actions/setup-go@v1
       with:
@@ -26,6 +33,13 @@ jobs:
     
     - name: Download golangci-lint
       run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.2
+
+    - uses: actions/cache@v1
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
     - name: Lint
       run: $(go env GOPATH)/bin/golangci-lint run --timeout=10m
