Use golangci action

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,24 +50,52 @@ linters-settings:
 linters:
   enable-all: true
   disable:
-    # NOTE: Currently impossible to calculate the optimal order
-    # Can be enabled when https://github.com/mdempsky/maligned/issues/9 is merged.
+    # 'scopelint' is deprecated (since v1.39.0) due to:
+    # The repository of the linter has been deprecated by the owner.  Replaced by exportloopref.
+    - scopelint
+    # 'maligned' is deprecated (since v1.38.0) due to:
+    # The repository of the linter has been archived by the owner.  Replaced by govet 'fieldalignment'. 
     - maligned
-    # NOTE: "effective" golang style is full of arguable practices.
+    # 'interfacer' is deprecated (since v1.38.0) due to:
+    # The repository of the linter has been archived by the owner.
+    - interfacer
+    # "effective" golang style is full of arguable practices.
     # We don't need that and besides gofmt does the required minimum of style modifications.
     - golint
-    # NOTE: Too much false positives
+    # Too much false positives
     - unparam
-    # NOTE: It's a great linter, but gets in the way too often by not being customizable.
+    # It's a great linter, but gets in the way too often by not being customizable.
     - gochecknoglobals
-    # NOTE: It considers too much things as magic numbers.
+    # It considers too much things as magic numbers.
     - gomnd
-    # NOTE: False positives.
+    # False positives.
     - wsl
-    # NOTE: Pointless.
+    # Pointless.
     - funlen
-    # NOTE: `TODO` comments are not offences.
+    # `TODO` comments are not offences.
     - godox
+    # It is sometimes beneficial to create structs with default zero values,
+    # without writing all those zero values.
+    - exhaustivestruct
+    # Short ifs are ugly.
+    - ifshort
+    # Things like cyclomatic complexity will be left to the developer's critical thinking.
+    - cyclop
+    - nestif
+    # Linting of tag names can be good for new code and API, but if there is an existing
+    # API well, you have to use the naming from the API.
+    - tagliatelle
+    # We just don't like revive.
+    - revive
+    # It's good, but the code is not yet migrated.
+    - goerr113
+    # We use stacktrace, which is incompatible with standard errors wrapping.
+    - wrapcheck
+    # We use stacktrace, which is incompatible with standard errors wrapping.
+    - errorlint
+    # We use goimports
+    - gci
+    - gofumpt
 issues:
   exclude-rules:
     - text: "weak cryptographic primitive"
