--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         golang: ["1.13", "1.12"]
         os: ["ubuntu-latest", "macos-latest"]
+        module: [".", "./executor/kubernetes"]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Remove previous jobs
@@ -32,7 +33,7 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Download golangci-lint
-      run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.2
+      run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.40.1
 
     - uses: actions/cache@v1
       with:
@@ -41,16 +42,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-go-
 
-    - name: Lint
-      run: $(go env GOPATH)/bin/golangci-lint run --timeout=10m
-    
-    - name: Test
-      run: go test -v ./...
+    - name: Lint ${{ matrix.module }} module
+      run: $(go env GOPATH)/bin/golangci-lint run --out-format github-actions --timeout=10m --path-prefix ${{ matrix.module }}
+      shell: bash
+      working-directory: ${{ matrix.module }}
 
-    - name: Lint executor/kubernetes module
-      run: $(go env GOPATH)/bin/golangci-lint run --timeout=10m
-      working-directory: ./executor/kubernetes
-    
-    - name: Test executor/kubernetes module
+    - name: Test ${{ matrix.module }} module
       run: go test -v ./...
-      working-directory: ./executor/kubernetes
+      shell: bash
+      working-directory: ${{ matrix.module }}
