--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ jobs:
     name: Test
     strategy:
       matrix:
-        golang: ["1.22", "1.23"]
+        golang: ["1.16"]
         os: ["ubuntu-latest", "macos-latest"]
         module: [".", "./executor/kubernetes", "./errors"]
     runs-on: ${{ matrix.os }}
