--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,18 +13,23 @@ jobs:
       matrix:
         golang: ["1.24.1"]
         os: ["ubuntu-latest", "macos-latest"]
-        module: [".", "./executor/kubernetes", "./errors"]
+        module:
+          - "."
+          - "./errors"
+          - "./executor/kubernetes"
+          - "./executor/vault"
+          - "./logger"
     runs-on: ${{ matrix.os }}
     steps:
     - name: Remove previous jobs
-      uses: rokroskar/workflow-run-cleanup-action@master
+      uses: rokroskar/workflow-run-cleanup-action@c631227427d0452af4994af0940d7655ebc50c7c
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
       # NOTE: Don't stop master or tags jobs since they might be uploading assets and do a partial release
       if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/master' && matrix.os == 'ubuntu-latest'"
 
     - name: Set up Go ${{ matrix.golang }}
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@0aaccfd150d50ccaeb58ebd88d36e91967a5f35b # v5.4.0
       with:
         go-version: ${{ matrix.golang }}
       id: go
@@ -35,7 +40,7 @@ jobs:
     - name: Download golangci-lint
       run: curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.64.8
 
-    - uses: actions/cache@v1
+    - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
       with:
         path: ~/go/pkg/mod
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
