fix(ci): lint offences

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,6 +15,7 @@ jobs:
         os: ["ubuntu-latest", "macos-latest"]
         module:
           - "."
+          - "./backoff"
           - "./errors"
           - "./executor/kubernetes"
           - "./executor/vault"
